--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Frontend Bootcamp</title>
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container">
             <a href="#" class="navbar-brand">Frontend Bootcamp</a>
@@ -31,7 +32,9 @@
         </div>
     </nav>
 
-    <h1>Hello world</h1>
+    <!-- Showcase -->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
