--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- Boxes -->
   <section class="p-5">
     <div class="container">
-      <div class="row text-center">
+      <div class="row text-center g-4">
         <div class="col-md">
           <div class="card bg-dark text-light">
             <div class="card-body text-center">
@@ -119,6 +119,27 @@
   </section>
 
   <!-- Learn Sections -->
+  <section id="learn" class="p-5">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md">
+          <img src="img/foundamentals.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-md p-5">
+          <h2>Learn the Foundamentals</h2>
+          <p class="lead">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati tempora quas totam nostrum fugit? Repellendus?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa dolorum, consequatur velit unde facere itaque illo ducimus libero! Eaque voluptas maiores eveniet id aspernatur incidunt accusamus itaque aut perspiciatis aliquam?
+          </p>
+          <a href="#" class="btn btn-light mt-3">
+            <i class="bi bi-chevron-right"></i> ReadMore
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
