--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
       <a href="#" class="navbar-brand">Frontend Bootcamp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -139,6 +139,33 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <section id="learn" class="p-5 bg-dark text-light">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md p-5">
+          <h2>Learn React</h2>
+          <p class="lead">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati tempora quas totam nostrum fugit? Repellendus?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa dolorum, consequatur velit unde facere itaque illo ducimus libero! Eaque voluptas maiores eveniet id aspernatur incidunt accusamus itaque aut perspiciatis aliquam?
+          </p>
+          <a href="#" class="btn btn-light mt-3">
+            <i class="bi bi-chevron-right"></i> ReadMore
+          </a>
+        </div>
+        <div class="col-md">
+          <img src="img/react.jpg" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Question Accordion -->
+  <section id="questions" class="p-5">
+
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
