--- a/index.html
+++ b/index.html
@@ -165,8 +165,117 @@
 
   <!-- Question Accordion -->
   <section id="questions" class="p-5">
-
+    <div class="container">
+      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+      <div class="accordion accordion-flush" id="questions">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne">
+              How much does it cost to attend?
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#questions">
+            <div class="accordion-body">
+              Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo">
+              Where exactly are you located?
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#questions">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem autem quas, vitae consequuntur qui dolores quis blanditiis nihil dolor laudantium maiores deserunt ipsa asperiores magni dolorum, totam non suscipit impedit dolore numquam consequatur! Exercitationem voluptatibus perferendis omnis eveniet tempora debitis ea incidunt. Provident dignissimos aliquam at, nam voluptatem quos deleniti!
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree">
+              What should I do?
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#questions">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus eum ipsa exercitationem pariatur ipsam id cupiditate corporis magnam alias, quaerat necessitatibus a culpa dicta eaque labore ducimus mollitia non fugiat!
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+
+  <!-- Instructors -->
+  <section id="instructions" class="p-5 bg-primary">
+    <div class="container">
+      <h2 class="text-center text-white">Our Instructors</h2>
+      <p class="lead text-center text-white mb-5">
+        Our instructors all have 5+ years working as a web developer in the industry.
+      </p>
+      <div class="row g-4">
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title md-3">Jen Lori</h3>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit nobis magnam fugit laudantium maiores? Voluptatibus.</p>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-github text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-google text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title md-3">Joe Doe</h3>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit nobis magnam fugit laudantium maiores? Voluptatibus.</p>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-github text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-google text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/women/10.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title md-3">Sara Smith</h3>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit nobis magnam fugit laudantium maiores? Voluptatibus.</p>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-github text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-google text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-circle mb-3" alt="">
+              <h3 class="card-title md-3">Neo Morphis</h3>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit nobis magnam fugit laudantium maiores? Voluptatibus.</p>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-github text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-google text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact & Map -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
